--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,9 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
-        "drupal/devel": "^5.1",
         "drupal/module_filter": "^4.0",
         "drupal/redirect": "^1.8",
         "drupal/social_media_links": "^2.9",
-        "drupal/webprofiler": "^10.0",
         "drush/drush": "^11.5"
     },
     "conflict": {
@@ -102,5 +100,9 @@
             ]
         },
         "patches-file": "composer.patches.json"
+    },
+    "require-dev": {
+        "drupal/devel": "^5.1",
+        "drupal/webprofiler": "^10.0"
     }
 }
