--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
+        "drupal/gin": "^3.0@RC",
+        "drupal/gin_toolbar": "^1.0@RC",
         "drupal/module_filter": "^4.0",
         "drupal/redirect": "^1.8",
         "drupal/social_media_links": "^2.9",
