--- a/config/global/core.extension.yml
+++ b/config/global/core.extension.yml
@@ -15,8 +15,8 @@ module:
   datetime: 0
   dblog: 0
   devel: 0
+  devel_entity_updates: 0
   devel_generate: 0
-  druframe_offer: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
@@ -35,6 +35,7 @@ module:
   module_filter: 0
   mysql: 0
   node: 0
+  offer: 0
   options: 0
   page_cache: 0
   path: 0
