--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
+        "drupal/devel_entity_updates": "^4.1",
+        "drupal/entity": "^1.4",
         "drupal/gin": "^3.0@RC",
         "drupal/gin_toolbar": "^1.0@RC",
         "drupal/module_filter": "^4.0",
