--- a/config/global/block.block.mainpagecontent_2.yml
+++ b/config/global/block.block.mainpagecontent_2.yml
@@ -17,4 +17,8 @@ settings:
   label: '2nd SITEBAR'
   label_display: visible
   provider: system
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    negate: false
+    pages: '<front>'
