--- a/config/global/user.role.authenticated.yml
+++ b/config/global/user.role.authenticated.yml
@@ -8,6 +8,7 @@ dependencies:
     - comment
     - contact
     - filter
+    - offer
     - search
     - shortcut
     - system
@@ -22,6 +23,7 @@ permissions:
   - 'access content'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'administer own offers'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
